--- a/files/default/logrotate.conf
+++ b/files/default/logrotate.conf
@@ -1,8 +1,17 @@
-# see "man logrotate" for details
-# rotate log files weekly
+# 
+# Cookbook Name:: rs_utils
 #
+# Copyright RightScale, Inc. All rights reserved.  All access and use subject to the
+# RightScale Terms of Service available at http://www.rightscale.com/terms.php and,
+# if applicable, other agreements such as a RightScale Master Subscription Agreement.
+# 
 # Managed by RightScale
 # DO NOT EDIT BY HAND
+#
+
+#
+# see "man logrotate" for details
+# rotate log files weekly
 #
 daily
 
